# KDevelopTemplates

./: README.md
cmake_cpp_fltk_beginner/: CMakeLists.txt  README  cmake_cpp_fltk_beginner.kdevtemplate  main.cpp
cmake_cpp_fltk_beginner/GUI/: Simple_window.cpp  Simple_window.h
